examples/test/testpolicy6701.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6701
  namespace: namespace234
spec:
  podSelector:
    matchLabels:
      key30: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value20
          key42: value10
      podSelector:
        matchLabels:
          key30: value23
          key40: value27
          key5: value15
